# goodreads

./: .env.example  .gitignore  docker-compose.yml  readme.MD
FE/: package-lock.json  package.json
FE/src/: App.tsx  index.css  main.tsx
FE/src/api/: authService.ts  axios.ts  bookService.ts  reviewService.tsx  socialService.ts
FE/src/components/: BookRecommendationCard.tsx  FollowButton.tsx  ReviewForm.tsx  ReviewList.tsx  UserRecommendationCard.tsx
FE/src/context/: AuthContext.tsx
FE/src/pages/: AuthPage.tsx  BookDetailPage.tsx  BookListPage.tsx  Dashboard.tsx  Navbar.tsx
FE/src/types/: ApiTypes.ts
FE/src/utils/: userLookup.ts
raw/: demo.txt  endpoints.txt  neo4j.txt  postgres.txt  todo.txt
server/: main.py  pyproject.toml  requirements.txt
server/cache/: redis.py
server/db/: mongo.py  postgres.py
server/graph/: neo4j.py
server/models/: book.py  follow.py  review.py  user.py
server/postgres_init/: 01_init.sql
server/routes/: auth.py  books.py  follows.py
server/services/: auth_service.py  book_service.py  follow_service.py  review_service.py
server/utils/: auth_bearer.py  rate_limiter.py  security.py
